# ai-tally

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  RUNNING.md  SECURITY.md
infra/gateway/: Dockerfile  pyproject.toml
infra/gateway/examples/: send_batch.py
infra/gateway/scripts/: backfill_stripe.py
infra/gateway/tests/: test_app_auth.py  test_app_backpressure.py  test_app_buffer.py  test_app_eval.py  test_app_events.py  test_app_guardrails.py  test_app_integrations.py  test_app_models.py  test_app_protocol.py  test_app_reconciliation.py  test_app_replay.py  test_app_replay_estimate.py  test_app_stripe.py  test_app_tenant_cac.py  test_app_tenant_connectors.py  test_app_usage.py  test_app_validation.py  test_backpressure.py  test_buffer.py  test_eval_executor.py  test_ingest_buffer.py  test_keyvault.py  test_mapping.py  test_mapping_context.py  test_mapping_sampling.py  test_metering.py  test_partition.py  test_protocol.py  test_ratelimit.py  test_replay_executor.py  test_replay_sampler.py  test_stripe_ingest.py  test_validation.py
sdk/python/: README.md  pyproject.toml
sdk/python/tests/: test_audit_log.py  test_backups.py  test_cdp_connectors.py  test_compat.py  test_context.py  test_context_drops.py  test_control_plane_ddl.py  test_cost_connectors.py  test_egress.py  test_enrichment.py  test_evals.py  test_extractors.py  test_governor.py  test_guardrails.py  test_guardrails_refresh.py  test_hmac_keys.py  test_identity.py  test_instrumentation.py  test_integration.py  test_ledger.py  test_metrics.py  test_models.py  test_object_storage.py  test_otel_spans_ddl.py  test_overrides.py  test_plan_limits.py  test_pricing.py  test_pricing_scraper.py  test_pricing_seeds.py  test_projection.py  (+20 more)
(+277 files in other folders)
