[project]
name = "tally-gateway"
version = "0.1.0"
description = "ai-tally ingest gateway — accepts SDK batches, enriches cost, writes to ClickHouse."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "clickhouse-connect>=0.7.16",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.4",
    "tally-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "httpx>=0.27",
]

[tool.uv.sources]
# The gateway reuses the SDK's wire/enrichment/timekeeping/pricing logic directly.
# Distribution name is `tally-sdk`; the import package is `tally`.
tally-sdk = { path = "../../sdk/python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
